# CMathUtils

./: .gitignore  CMakeLists.txt  README.md
demo/: test_cmu_earth.c  test_cmu_matrix.c  test_cmu_rotation.c
include/: cmu_defs.h  cmu_dynamic_matrix.h  cmu_earth.h  cmu_matrix.h  cmu_rotation.h  cmu_static_matrix.h
scripts/: test_cmu_earth.py  test_cmu_matrix.py
src/: cmu_dynamic_matrix.c  cmu_earth.c  cmu_matrix.c  cmu_rotation.c  cmu_static_matrix.c
